--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                             <div class="header__top__right__social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://www.instagram.com/serendipianatural.ok/"><i class="fa fa-instagram"></i></a>
                                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
                                                       </div>
                             <div class="header__top__right__language">
@@ -270,8 +270,7 @@
                         
                         <div class="footer__widget__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/serendipianatural.ok/"><i class="fa fa-instagram"></i></a>
                             <a href="#"><i class="fa fa-pinterest"></i></a>
                         </div>
                     </div>
